# ammit

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ammit/: __init__.py  __main__.py  case.py  cli.py  collect.py  commands.py  console.py  context.py  integrity.py  models.py  render.py  triage.py  verdict.py
src/ammit/collectors/: __init__.py  accounts.py  base.py  filesystem.py  logs.py  persistence.py  volatile.py
src/ammit/rules/: __init__.py  datasets.py  engine.py
src/ammit/rules/builtin/: builtin.yaml
tests/: conftest.py  test_case.py  test_datasets.py  test_engine.py  test_integrity.py  test_triage.py  test_verdict.py
