[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ammit"
dynamic = ["version"]
description = "DFIR triage for Linux — weigh a system's heart against the feather of Maat and render a verdict."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gustavo Almeida" }]
keywords = [
  "dfir",
  "forensics",
  "incident-response",
  "linux",
  "triage",
  "security",
  "blue-team",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/gusta-ve/ammit"
Repository = "https://github.com/gusta-ve/ammit"
Issues = "https://github.com/gusta-ve/ammit/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[project.scripts]
ammit = "ammit.cli:run"

[tool.hatch.version]
path = "src/ammit/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ammit"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]  # line length is owned by the formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
